# claude-introspect

./: .mcp.json  CLAUDE.md  Makefile  README.md  bench_claude.py  bump_version.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
agents/: session-inspector.md
src/claude_session_inspector/: formatting.py  inspection.py  search.py  server.py  sessions.py
tests/: test_formatting.py  test_inspection.py  test_search.py  test_server.py  test_sessions.py
