[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-introspect"
version = "0.1.0"
description = "MCP server for introspecting Claude Code session history — browse, search, read, and query past conversations"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
]

[project.scripts]
claude-introspect = "claude_session_inspector.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_session_inspector"]
